# SOHOpy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: conf.py  environment.md  index.md  lasco_port_status.md  lasco_porting_plan.md
docs/api/: lasco.rst  sohopy.rst
docs/guides/: calibration-data.md  current-capabilities.md  full-workflow.md  installation.md  lasco-level1.md  notebooks.md  polarization.md  quickstart.md
docs/reference/: content-plan.md  idl-parity.md  readthedocs-plan.md  release-plan.md
examples/: README.md  lasco_full_workflow.py  lasco_level1_synthetic.py  lasco_polarization_synthetic.py
notebooks/: 00_synthetic_full_workflow.ipynb  01_lasco_calibration_cache.ipynb  02_lasco_data_download_reduce_visualize.ipynb  README.md
references/legacy/lasco_idl/: README.md  c2_calfactor.pro  c2_calibrate.pro  c3_calfactor.pro  c3_calfactor_var.pro  c3_calibrate.pro  calc_dark_bias.pro  check_obesumerror.pro  ddistim2ecs.pro  decode_sc_dacs.pro  diff2time.pro  fix_obesumerror.pro  fix_time_jumps.pro  get_cal_dark.pro  get_cal_photom.pro  get_cal_stray.pro  get_cal_struct.pro  get_cal_vignet.pro  get_crota.pro  get_missing_pckts.pro  get_new_file_number.pro  get_tel_config.pro  help_reduce.html  make_browse.pro  make_fits_hdr.pro  make_index.pro  miss_blocks.pro  move_reduce_log.pro  photocal.pro  reduce_daily.pro  reduce_image.pro  reduce_img_hdr.pro  reduce_level_05.pro  reduce_level_1.pro  reduce_main.pro  reduce_rectify.pro  reduce_rectify_p1p2.pro  reduce_refcoord.pro  reduce_statistics.pro  reduce_statistics2.pro  (+11 more)
references/legacy/lasco_idl/fuzzy/: dct.pro  fuzzy_block.pro  fuzzy_image.pro  fuzzy_to_num.pro  get_miss_blocks.pro  get_tmask.pro  getl05hdrparam.pro  grad_zone.pro  hcie_zone.pro  (+6 more)
scripts/: download_lasco_calibration.py  run_lasco_synthetic_workflow.py
scripts/idl/: run_lasco_parity.pro  run_lasco_parity.sh
src/sohopy/: __init__.py
src/sohopy/lasco/: __init__.py  assets.py  calibration.py  cli.py  config.py  exceptions.py  geometry.py  headers.py  image_ops.py  io.py  legacy.py  level1.py  missing_blocks.py  polarization.py  statistics.py  time.py  visualization.py
tests/: test_examples.py  test_lasco_assets.py  test_lasco_calibration.py  test_lasco_geometry.py  test_lasco_headers.py  test_lasco_idl_scripts.py  test_lasco_legacy.py  test_lasco_level1.py  test_lasco_missing_blocks.py  test_lasco_polarization.py  test_lasco_statistics.py  test_notebooks.py
tests/fixtures/idl/: README.md
(+5 files in other folders)
